--- a/Microwave.test.integration/Microwave.test.integration.csproj
+++ b/Microwave.test.integration/Microwave.test.integration.csproj
@@ -57,7 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT1_CookcontrollerDisplay.cs" />
-    <Compile Include="IT4_CookcontrollerTimer.cs" />
+    <Compile Include="IT3_CookcontrollerTimer.cs" />
+    <Compile Include="IT7_AllButtonsUI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
