--- a/Microwave.test.integration/Microwave.test.integration.csproj
+++ b/Microwave.test.integration/Microwave.test.integration.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT1_CookcontrollerDisplay.cs" />
+    <Compile Include="IT2_CookcontrollerPowerTube.cs" />
+    <Compile Include="IT6_UserInterfaceLight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
