--- a/Microwave.test.integration/Microwave.test.integration.csproj
+++ b/Microwave.test.integration/Microwave.test.integration.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT1_CookcontrollerDisplay.cs" />
+    <Compile Include="IT5_UserInterfaceDisplay.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
