--- a/Microwave.test.integration/Microwave.test.integration.csproj
+++ b/Microwave.test.integration/Microwave.test.integration.csproj
@@ -62,6 +62,7 @@
     <Compile Include="IT6_UserInterfaceLight.cs" />
     <Compile Include="IT3_CookcontrollerTimer.cs" />
     <Compile Include="IT7_AllButtonsUI.cs" />
+    <Compile Include="IT8_DoorUserInterface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
