--- a/Microwave.test.integration/Microwave.test.integration.csproj
+++ b/Microwave.test.integration/Microwave.test.integration.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IT3_CookcontrollerDisplay.cs" />
+    <Compile Include="IT4b_UICookController.cs" />
     <Compile Include="IT5_UserInterfaceDisplay.cs" />
     <Compile Include="IT1_CookcontrollerPowerTube.cs" />
     <Compile Include="IT6_UserInterfaceLight.cs" />
